--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<html>
-  <head>
-    <title>choo scribe</title>
-  </head>
-  <body>
-    <div></div>
-    <script src="bundle.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en" dir="ltr"><head><title>choo-scriber</title><meta charset="utf-8"></head><body><div></div><script src="bundle.js"></script></body></html>
