--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en" dir="ltr"><head><title>choo-scriber</title><meta charset="utf-8"></head><body><div></div><script src="bundle.js"></script></body></html>
+<!doctype html><html lang="en" dir="ltr"><head><title>choo-scriber</title><link rel="manifest" href="manifest.json"><link rel="stylesheet" href="bundle.css"><meta charset="utf-8"></head><body><div></div><script src="bundle.js"></script></body></html>
