--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-
-    <!doctype html>
-    <html lang="en" dir="ltr">
-    <head>
-      <title>choo-scriber</title>
-      <link rel="manifest" href="manifest.json">
-      <link rel="stylesheet" href="bundle.css">
-      <meta charset="utf-8">
-    </head>
-    <body>
-      <div></div>
-      <script src="bundle.js"></script>
-    </body>
-    </html>
-  
+<!DOCTYPE html><html lang="en" dir="ltr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><script src="https://cdn.polyfill.io/v2/polyfill.min.js" defer></script><script src="bundle.js" defer></script><link rel="preload" as="style" href="bundle.css" onload="this.rel='stylesheet'"><script nomodule>;(function(a){"use strict";var b=function(b,c,d){function e(a){return h.body?a():void setTimeout(function(){e(a)})}function f(){i.addEventListener&&i.removeEventListener("load",f),i.media=d||"all"}var g,h=a.document,i=h.createElement("link");if(c)g=c;else{var j=(h.body||h.getElementsByTagName("head")[0]).childNodes;g=j[j.length-1]}var k=h.styleSheets;i.rel="stylesheet",i.href=b,i.media="only x",e(function(){g.parentNode.insertBefore(i,c?g:g.nextSibling)});var l=function(a){for(var b=i.href,c=k.length;c--;)if(k[c].href===b)return a();setTimeout(function(){l(a)})};return i.addEventListener&&i.addEventListener("load",f),i.onloadcssdefined=l,l(f),i};"undefined"!=typeof exports?exports.loadCSS=b:a.loadCSS=b})("undefined"!=typeof global?global:this);;(function(a){if(a.loadCSS){var b=loadCSS.relpreload={};if(b.support=function(){try{return a.document.createElement("link").relList.supports("preload")}catch(b){return!1}},b.poly=function(){for(var b=a.document.getElementsByTagName("link"),c=0;c<b.length;c++){var d=b[c];"preload"===d.rel&&"style"===d.getAttribute("as")&&(a.loadCSS(d.href,d,d.getAttribute("media")),d.rel=null)}},!b.support()){b.poly();var c=a.setInterval(b.poly,300);a.addEventListener&&a.addEventListener("load",function(){b.poly(),a.clearInterval(c)}),a.attachEvent&&a.attachEvent("onload",function(){a.clearInterval(c)})}}})(this);</script><link rel="manifest" href="/manifest.json"><meta name="description" content="A very cute app"><title>choo-scriber</title><style>html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-ms-overflow-style:scrollbar;-webkit-tap-highlight-color:transparent;}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button;}</style><link rel="icon" type="image/x-icon" href="favicon.ico"></head><div></div></html>
